fixed social link spacing asymmetry

--- a/src/components/Contact/styles.module.scss
+++ b/src/components/Contact/styles.module.scss
@@ -19,8 +19,8 @@
 
 .email {
   background-color : #dd4b39;
-	padding-top : 12px;
-	padding-bottom : 11px;
+	padding-top : 11px;
+	padding-bottom : 12px;
 }
 
 .socialLinks {
@@ -64,6 +64,6 @@
 .resume {
   background: #2F80ED;
 	background: linear-gradient(to right, #56CCF2, #2F80ED);
-	padding-top : 11.5px;
-	padding-bottom : 11.5px;
+	padding-top : 11px;
+	padding-bottom : 12px;
 }
